--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "cd ../ && husky install ./frontend/.husky"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
@@ -30,11 +31,5 @@
     "simple-git-hooks": "^2.8.1",
     "tailwindcss": "^3.3.1",
     "typescript": "5.0.4"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "yarn lint-staged"
-  },
-  "lint-staged": {
-    "*": "eslint --fix"
   }
 }
