--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
+    "js-cookie": "^3.0.5",
     "next": "^13.3.1-canary.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.5",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -25,9 +27,10 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
     "eslint-plugin-react": "^7.32.2",
+    "husky": "^8.0.3",
     "lint-staged": "^13.2.1",
-    "postcss": "^8.4.22",
-    "sass": "^1.62.0",
+    "postcss": "^8.4.23",
+    "postcss-nested": "^6.0.1",
     "simple-git-hooks": "^2.8.1",
     "tailwindcss": "^3.3.1",
     "typescript": "5.0.4"
