--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "autoprefixer": "^10.4.14",
+    "classnames": "^2.3.2",
     "eslint": "^8.39.0",
     "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
