--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,9 +1,12 @@
-name: Frontend Tests
+name: CI
+
 on:
   push:
+    branches: [main]
     paths:
       - frontend/**
   pull_request:
+    branches: [main]
     types: [opened, synchronize, reopened]
     paths:
       - frontend/**
@@ -11,19 +14,51 @@ defaults:
   run:
     working-directory: frontend
 jobs:
-  lint:
-    name: Lint checks
+  build:
+    strategy:
+      matrix:
+        node-version: [18.x]
+    name: Build with ${{ matrix.node-version }}
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Setup node
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: 18
-          cache: 'yarn'
-          cache-dependency-path: frontend/yarn.lock
-      - name: Install dependencies
-        run: yarn
-      - name: Run tests
-        run: yarn lint
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+      - run: npm ci
+      - run: npm run build-prod
+
+  test:
+    strategy:
+      matrix:
+        node-version: [18.x]
+
+    name: Run all tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+      - run: npm ci
+
+      - if: github.event_name == 'pull_request'
+        name: Validate all commits from PR
+        run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+
+      - name: Linter
+        run: npm run lint
+
+      - name: Type checking
+        run: npm run check-types
+
+      - name: Run unit tests
+        run: npm run test
