--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -11,9 +11,11 @@ on:
     types: [opened, synchronize, reopened]
     paths:
       - frontend/**
+
 defaults:
   run:
     working-directory: frontend
+
 jobs:
   build:
     strategy:
@@ -29,7 +31,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-          cache-dependency-path: frontend/yarn.lock
+          cache-dependency-path: frontend/package-lock.json
       - run: npm ci
       - run: npm run build-prod
 
@@ -50,7 +52,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-          cache-dependency-path: frontend/yarn.lock
+          cache-dependency-path: frontend/package-lock.json
       - run: npm ci
 
       - if: github.event_name == 'pull_request'
