--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "cypress:headless": "cypress run",
     "e2e": "start-server-and-test dev http://localhost:3000 cypress",
     "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless",
-    "prepare": "husky install",
+    "prepare": "cd ../ && husky install ./frontend/.husky",
     "postbuild": "next-sitemap"
   },
   "dependencies": {
