--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,12 +25,16 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
+    "@v9v/ts-react-telegram-login": "^1.1.1",
     "js-cookie": "^3.0.5",
     "next": "^13.3.1-canary.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-animate-height": "^3.1.1",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.38.5",
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
     "@commitlint/cz-commitlint": "^17.5.0",
@@ -41,12 +45,21 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
+    "@types/js-cookie": "^3.0.3",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.37",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "autoprefixer": "^10.4.14",
+    "classnames": "^2.3.2",
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
     "cssnano": "^6.0.0",
     "cypress": "^12.10.0",
+    "eslint": "^8.39.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-next": "^13.3.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-cypress": "^2.13.2",
     "eslint-plugin-import": "^2.27.5",
@@ -59,6 +72,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.11",
+    "eslint-plugin-tailwindcss": "^3.11.0",
     "eslint-plugin-testing-library": "^5.10.3",
     "eslint-plugin-unused-imports": "^2.0.0",
     "http-server": "^14.1.1",
@@ -67,24 +81,13 @@
     "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.2",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.23",
+    "postcss-nested": "^6.0.1",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.0",
     "semantic-release": "^19.0.5",
-    "start-server-and-test": "^2.0.0",
-    "eslint-config-next": "^13.3.1",
-    "eslint-plugin-tailwindcss": "^3.11.0",
-    "@antfu/eslint-config": "^0.38.5",
-    "@types/js-cookie": "^3.0.3",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.37",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "autoprefixer": "^10.4.14",
-    "classnames": "^2.3.2",
-    "eslint": "^8.39.0",
-    "postcss": "^8.4.23",
-    "postcss-nested": "^6.0.1",
     "simple-git-hooks": "^2.8.1",
+    "start-server-and-test": "^2.0.0",
     "tailwindcss": "^3.3.1",
     "typescript": "5.0.4"
   },
