--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "clean": "rimraf .next .swc out coverage",
     "lint": "next lint",
     "format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
-    "check-types": "tsc --noEmit --pretty && tsc --project cypress --noEmit --pretty",
+    "check-types": "tsc --noEmit --pretty",
     "test": "jest",
     "commit": "cz",
     "cypress": "cypress open",
