--- a/frontend/package.json
+++ b/frontend/package.json
@@ -83,6 +83,7 @@
     "postcss": "^8.4.23",
     "postcss-nested": "^6.0.1",
     "prettier": "^2.8.8",
+    "resize-observer-polyfill": "^1.5.1",
     "rimraf": "^5.0.0",
     "semantic-release": "^19.0.5",
     "simple-git-hooks": "^2.8.1",
